# concu-news

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  server.cpp
src/ipcs/: Cola.h  LockFile.cpp  LockFile.h
src/procesos/: Client.cpp  Client.h  MicroServicio.cpp  MicroServicio.h  Server.cpp  Server.h  protocol.h
src/utilidades/: Logger.cpp  Logger.h  Opciones.h
